# pyqa

./: .pre-commit-config.yaml  README.md  ruff.toml
product1/: pyproject.toml
product1/src/product1/: processor.py
product1/tests/: conftest.py  test_processor.py
